knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Contact_Extended_Field__c/fields/pqcrush__Contact__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Extended Fields</relationshipLabel>
    <relationshipName>Contact_Extended_Fields</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>