knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Contact_Extended_Field__c/fields/pqcrush__Influence__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Influence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influence</label>
    <referenceTo>pqcrush__pq_Influence__c</referenceTo>
    <relationshipLabel>Contact Extended Fields</relationshipLabel>
    <relationshipName>Contact_Extended_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>