knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Contact_Extended_Field__c/fields/pqcrush__Support__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support</label>
    <referenceTo>pqcrush__pq_Support__c</referenceTo>
    <relationshipLabel>Contact Extended Fields</relationshipLabel>
    <relationshipName>Contact_Extended_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>